# penrose-personal

./: .gitignore  .xinitrc  Cargo.toml  README.md  alacritty.yml  flake.nix
.config/: picom.conf
.config/alacritty/: alacritty.yml
.config/helix/: config.toml
.config/helix/themes/: gruvbox.toml
.config/leftwm/: config.ron
.config/nushell/: config.nu  env.nu
.config/polybar/: config.ini
nu/: config.toml
src/: hooks_startup_script.rs  main.rs
