[package]
name = "penrose-personal"
version = "0.1.4"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2018"
license = "GNU AGPLv3-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { path = "/home/magewe/rust/penrose", features = [ "xcb", "xcb_draw", "keysyms", "serde" ] }
simplelog = "0.8.0"
tracing = { version = "0.1", features = ["attributes", "log"] }
