[package]
name = "penrose-personal"
version = "0.1.4"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2021"
license = "GNU AGPLv3-or-later"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { version = "^0.2", features = [ "xcb", "xcb_draw", "keysyms", "serde" ] }
simplelog = "^0.8"
tracing = { version = "^0.1", features = ["attributes", "log"] }

[profile.release]
lto = "fat"
codegen-units = 1