[package]
name = "penrose-personal"
version = "0.2.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2021"
license = "GNU AGPLv3-or-later"
publish = false
readme = "README.md"

[dependencies]
penrose = { version = "^0.3", features = ["keysyms", "serde"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
